example/error/404.wxml
<mt-error
    type="404"
    icon="/example/error/images/404.png"
    btnEvent="goHome"></mt-error>